--- a/Course_Project_Report__Practical_Machine_Learning_Course.Rmd
+++ b/Course_Project_Report__Practical_Machine_Learning_Course.Rmd
@@ -4,16 +4,16 @@ author: "Maroje Raguž"
 date: "May 11, 2021"
 output:
     html_document:
-    toc: yes
+    toc: true
     toc_depth: 2
-    keep_md: yes
+    keep_md: true
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, cache = FALSE)
 ```
 # Introduction
-This is the Course Project Report for the Joan Hopkins University Data Science Specialization course on Practical Machine Leaning held ot the Coursera. The project involves uploading of training and test data sets, data cleaning and creating a prediction model based on machine learning.  The steps taken, to produce the model and to make predictions, are described below.
+This is the Course Project Report for the Joan Hopkins University Data Science Specialization course on Practical Machine Leaning held on the Coursera. The project involves uploading of training and test data sets, data cleaning and creating a prediction model based on machine learning. The steps taken, to produce the model and to make predictions, are described below.
 
 # Executive Summary
 ## Background
